--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   "require": {
     "php": "~7.2|~7.3|~7.4",
     "magento/framework": "102.0.*|103.0.*",
-    "eloom/module-payu": "1.0.*"
+    "eloom/module-payu": "dev-main"
   },
   "license": [
     "OSL-3.0",
