--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
   "minimum-stability": "dev",
   "prefer-stable" : true,
   "require": {
-    "php": "~7.2|~7.3|~7.4",
-    "magento/framework": "102.0.*|103.0.*",
+    "php": "~8.1",
+    "magento/framework": "103.0.4",
     "eloom/module-payu": "dev-main"
   },
   "license": [
