--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   "require": {
     "php": "~8.1",
     "magento/framework": "103.0.4",
-    "eloom/module-payu": "dev-main"
+    "eloom/module-payu": "2.0.*"
   },
   "license": [
     "OSL-3.0",
